<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/incToolbar"
            layout="@layout/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/incToolbar" />

        <View
            android:id="@+id/viewMoreId"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_more"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewMore" />

        <TextView
            android:id="@+id/txtMoreAccountIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/cnt_account_id"
            android:textAppearance="@style/sHeader3AQR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewMore" />

        <TextView
            android:id="@+id/txtMoreAccountId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="BB711"
            android:textAppearance="@style/sHeader4AQR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMoreAccountIdLabel" />

        <Button
            android:id="@+id/btMoreChangeId"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/bg_button_1"
            android:text="@string/change_account"
            android:textAppearance="@style/sHeader3AQR"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMoreAccountId" />

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_more"
            app:layout_constraintTop_toBottomOf="@+id/viewMoreId" />

        <TextView
            android:id="@+id/txtMoreSDKStatusLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="50dp"
            android:text="@string/sdk_status"
            android:textAppearance="@style/sHeader3AQR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewMoreId" />

        <TextView
            android:id="@+id/txtMoreSDKStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:text="@string/connected"
            android:textAppearance="@style/sHeader4AQR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMoreSDKStatusLabel" />

        <TextView
            android:id="@+id/txtMoreLogoutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/logout"
            android:textAppearance="@style/sHeader3AQR"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMoreSDKStatus" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtMoreSDKStatus"
            app:srcCompat="@drawable/ic_log_out" />

        <View
            android:id="@+id/viewLoading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:background="#80ffffff" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>